@@ -48,10 +48,11 @@ Library
     dictates.
   + the parser now removes the escapechar prefix from escaped characters.
   + when quoting=QUOTE_NONNUMERIC, the writer now tests for numeric
-    objects, rather than attempting to cast to float, and using the
-    success of that as the determinator.
+    types, rather than any object than can be represented as a numeric.
   + when quoting=QUOTE_NONNUMERIC, the reader now casts unquoted fields
     to floats.
+  + reader now allows \r characters to be quoted (previously it only allowed
+    \n to be quoted).
   + writer doublequote handling improved.
   + Dialect classes passed to the module are no longer instantiated by
     the module before being parsed (the former validation scheme required
